[package]
name = "mudb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
] }
tokio-util = { version = "0.7.11", features = ["codec"] }
log = "0.4.22"
env_logger = "0.11.3"
bytes = "1.6.0"

clap = { version = "4.5.8", features = ["derive"] }
futures = { version = "0.3", default-features = true }